--- a/packages/electron-updater/package.json
+++ b/packages/electron-updater/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron-updater",
+  "name": "electron-updater-node-12",
   "version": "4.3.9",
   "description": "Cross platform updater for electron applications",
   "main": "out/main.js",
@@ -11,6 +11,9 @@
   "files": [
     "out"
   ],
+  "scripts": {
+    "build": "tsc --build"
+  },
   "dependencies": {
     "@types/semver": "^7.3.5",
     "builder-util-runtime": "workspace:*",
@@ -25,7 +28,8 @@
     "@types/fs-extra": "^9.0.11",
     "@types/js-yaml": "^4.0.1",
     "@types/lodash.escaperegexp": "^4.1.6",
-    "@types/lodash.isequal": "^4.5.5"
+    "@types/lodash.isequal": "^4.5.5",
+    "typescript": "^4.2.4"
   },
   "typings": "./out/main.d.ts",
   "publishConfig": {
