--- a/packages/electron-updater/package.json
+++ b/packages/electron-updater/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-updater-node-12",
-  "version": "4.3.9",
+  "version": "4.3.10",
   "description": "Cross platform updater for electron applications",
   "main": "out/main.js",
   "author": "Vladimir Krivosheev",
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@types/semver": "^7.3.5",
-    "builder-util-runtime": "workspace:*",
+    "builder-util-runtime": "^8.7.5",
     "fs-extra": "^10.0.0",
     "js-yaml": "^4.1.0",
     "lazy-val": "^1.0.4",
